# UnixPi

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_report.json
.github/workflows/: ci.yml
boot/: config.txt  init_secure.sh  recovery.sh  secure_boot.sh
data/: vulnerabilities.yml
scripts/: check_dependencies.py  configure_system.sh  create_image.sh  create_offline_package.sh  install_dependencies.sh  setup_environment.sh  setup_firmware.sh  update.sh  update_firmware.sh  write_to_sd.sh
stubs/psutil/: __init__.pyi
stubs/scapy/: __init__.pyi
tests/: test_security.py
unixpi/: __init__.py
unixpi/security/: __init__.py  network_analyzer.py  system_monitor.py
